syntax = "proto3";

package bookingservice;

option go_package = "github.com/rishad004/hotel-booking-platform/booking";

service BookingService {
  rpc BookHotel(BookHotelRequest) returns (BookingResponse);
  rpc VacateHotel(VacateHotelRequest) returns (BookingResponse);
}

message BookHotelRequest {
  int32 user_id = 1;
  int32 room_id = 2;
}

message VacateHotelRequest {
  int32 booking_id = 1;
}

message BookingResponse {
  string message = 1;
}
